fix: game form - remove file upload and improve spacing on success view

--- a/frontend/src/components/WelcomePage/WelcomePage.css
+++ b/frontend/src/components/WelcomePage/WelcomePage.css
@@ -566,14 +566,14 @@
 
 /* =========================== success message =========================== */
 /* Step 3 success UI */
-.step-success-container {
+.welcome-page-step-success-container {
   text-align: center;
   padding: 2rem 0;
 }
 
-.success-icon-wrapper img {
-  width: 64px;
-  height: 64px;
+.welcome-page-success-icon-wrapper img {
+  width: 70px;
+  height: 70px;
   margin-bottom: 1rem;
 }
 
@@ -595,18 +595,20 @@
 
 
 /* =========================== token and SDK link =========================== */
-.sdk-download-link {
+.welcome-page-sdk-download-link {
   color: #00719a;
   font-weight: 500;
   text-decoration: underline;
   transition: color 0.3s;
+  font-size: 15px;
+  margin-top: 1rem;
 }
 
-.sdk-download-link:hover {
+.welcome-page-sdk-download-link:hover {
   color: #4c1764;
 }
 
-.access-token-box {
+.welcome-page-access-token-box {
   background-color: #f6f6f6;
   border: 1px solid #ccc;
   padding: 1rem;
@@ -614,17 +616,19 @@
   font-family: monospace;
   text-align: left;
   direction: ltr;
+  margin-top: 3rem;
 }
 
-.token-value {
+.welcome-page-token-value {
   color: #333;
   font-size: 13px;
 }
 
-.token-note {
+.welcome-page-token-note {
   margin-top: 1rem;
   font-size: 12px;
   color: #888;
+  margin-top: 2rem;
 }
 
 
